--- a/app/views/authentications/home.html.erb
+++ b/app/views/authentications/home.html.erb
@@ -1,7 +1,10 @@
 <% if user_signed_in? %>
     Logged in as <strong><%= current_user.email %></strong>.
+    <br>
     <%= link_to 'Edit profile', edit_user_registration_path %> |
+    <%= link_to 'Show/edit credit cards', profile_path %> |
     <%= link_to 'Authentications', authentications_path %> |
+    <%= link_to 'Facebook stuff', facebook_path %> |
     <%= link_to "Logout", destroy_user_session_path, method: :delete %>
 <% else %>
     <%= link_to "Sign up", new_user_registration_path %> |
