--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -5,12 +5,14 @@
     <th>User</th>
     <th>Provider</th>
     <th>Uid</th>
+    <th>Token</th>
   </tr>
   <% for authentication in @authentications %>
     <tr>
       <td><%= authentication.user_id %></td>
       <td><%= authentication.provider %></td>
       <td><%= authentication.uid %></td>
+      <td><%= truncate(authentication.token, :length => 20) %></td>
       <td><%= link_to "Destroy", authentication, :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
   <% end %>
