--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,9 +1,19 @@
-<h1>Profile for <%= current_user.email %></h1>
+<h1>Profile for <%= current_user.email %> (<%= current_user.id %>)</h1>
 
-<h3>My credit cards</h3>
-<% current_user.credit_cards.each do |cc| %>
-    <%= cc.cc_number %>
-<% end %>
+<%= simple_nested_form_for current_user, :url => user_registration_path do |f| %>
 
-<%= link_to "Add credit card", addcc_path(current_user) %>
-
+    <%= f.fields_for :cards do |card_form| %>
+        <h3>Credit card</h3>
+        <%= card_form.text_field :cc_type, :placeholder => 'Credit Card Type', :collection => ['Visa', 'Amex','Diners'] %>
+        <%= card_form.text_field :cc_number, :placeholder => 'Credit Card Number' %>
+        <%= card_form.text_field :cc_cvc, :placeholder => 'Credit Card CVC Code' %>
+        <%= card_form.text_field :cc_exp_month, :placeholder => 'Expiration Month' %>
+        <%= card_form.text_field :cc_exp_year, :placeholder => 'Expiration Year' %>
+        <%= card_form.text_field :cc_name, :placeholder => 'Name on Credit Card' %>
+        <%= card_form.link_to_remove "Remove this card" %>
+        <hr>
+    <% end %>
+    <p><%= f.link_to_add "Add a card", :cards %></p>
+    <hr>
+    <%= f.submit %>
+<% end  %>
