--- a/app/views/authentications/home.html.erb
+++ b/app/views/authentications/home.html.erb
@@ -1,14 +1,14 @@
 <% if user_signed_in? %>
-    Logged in as <strong><%= current_user.email %></strong>.
-    <br>
+    <h5>Logged in as <strong><%= current_user.email %></strong>.</h5>
     <%= link_to 'Edit profile', edit_user_registration_path %> |
     <%= link_to 'Show/edit credit cards', profile_path %> |
     <%= link_to 'Authentications', authentications_path %> |
     <%= link_to 'Facebook stuff', facebook_path %> |
     <%= link_to "Logout", destroy_user_session_path, method: :delete %>
 <% else %>
-    <%= link_to "Sign up", new_user_registration_path %> |
-    <%= link_to "Login", new_user_session_path %>
-    <li><%= link_to "Twitter", user_omniauth_authorize_path(:twitter) %></li>
-    <li><%= link_to "Facebook", user_omniauth_authorize_path(:facebook) %></li>
+    <h5>Not logged in</h5>
+    <li><%= link_to "Sign up a new account", new_user_registration_path %></li>
+    <li><%= link_to "Login to existing account", new_user_session_path %></li>
+    <li><%= link_to "Sign up/Login using Twitter", user_omniauth_authorize_path(:twitter) %></li>
+    <li><%= link_to "Sign up/Login using Facebook", user_omniauth_authorize_path(:facebook) %></li>
 <% end %>
