--- a/app/views/authentications/home.html.erb
+++ b/app/views/authentications/home.html.erb
@@ -1,9 +1,15 @@
+<% title "Home" %>
+
 <% if user_signed_in? %>
     <h5>Logged in as <strong><%= current_user.email %></strong>.</h5>
     <%= link_to 'Edit profile', edit_user_registration_path %> |
     <%= link_to 'Show/edit credit cards', profile_path %> |
     <%= link_to 'Authentications', authentications_path %> |
     <%= link_to 'Facebook stuff', facebook_path %> |
+    <hr>
+    <%= link_to 'Search Person', people_path %> |
+    <%= link_to 'Add a Person', new_person_path %> |
+
     <%= link_to "Logout", destroy_user_session_path, method: :delete %>
 <% else %>
     <h5>Not logged in</h5>
@@ -11,4 +17,10 @@
     <li><%= link_to "Login to existing account", new_user_session_path %></li>
     <li><%= link_to "Sign up/Login using Twitter", user_omniauth_authorize_path(:twitter) %></li>
     <li><%= link_to "Sign up/Login using Facebook", user_omniauth_authorize_path(:facebook) %></li>
+<% end %>
+
+
+<h5>Recent activity:</h5>
+<% @people_with_activity.each do |c|  %>
+    <h5><%= link_to c.person.fullname, person_path(c.person) %>(clicks:<%= c.count %>)</h5>
 <% end %>
