Added photos, stories and update_actions

--- a/app/views/facebook/index.html.erb
+++ b/app/views/facebook/index.html.erb
@@ -1,1 +1,2 @@
 <%= link_to "Send Hello to your facebook account (if authorized)", facebook_send_hello_path(:text => "Hello") %>
+<%= link_to "Get a list of your Facebook friends (if authorized)", facebook_show_fb_friends_path %>
