--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,7 @@
 
   <body>
 
-    <%= render "shared/topnav" %>
-
+    <%= render 'shared/topnav' %>
 
     <div class="large-12 small-12 columns">
       <div class="row">
@@ -34,6 +33,8 @@
         <%= yield %>
       </div>
     </div>
+
+    <%= render 'shared/footer' %>
 
     <%= javascript_include_tag "application" %>
   </body>
