--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,5 +1,4 @@
-
-<%= simple_nested_form_for @person, :html => { :class => "form-horizontal" } do |f| %>
+<%= simple_nested_form_for @person, :html => {:class => "form-horizontal"} do |f| %>
 
     <% if @person.errors.any? %>
         <div id="error_explanation">
@@ -14,46 +13,77 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+      <%= f.input :name, :readonly => readonly %>
     </div>
 
     <div class="field">
-      <%= f.label :surname %>
-      <%= f.text_field :surname %>
+      <%= f.input :surname, :readonly => readonly %>
     </div>
 
     <% if !@person.new_record? %>
 
         <h3>Events in <%= @person.fullname %>'s life </h3>
-        <%= f.simple_fields_for :events do |event_form| %>
-            <%= event_form.input :name,     :label_html => {:class => 'horiz_input'}, :input_html => {:class => 'horiz_input'}, :placeholder => 'Event name', :readonly => readonly %>
-            <%= event_form.input :date,     :label_html => {:class => 'horiz_input'}, :input_html => {:class => 'horiz_input'}, :placeholder => 'Event date', :readonly => readonly  %>
-            <%= event_form.input :comment,  :label_html => {:class => 'horiz_input'}, :input_html => {:class => 'horiz_input'}, :placeholder => 'Event comment', :readonly => readonly  %>
+        <%= f.simple_fields_for  :events do |event_form| %>
+            <%= event_form.input :name,    :label_html => {:class => 'horiz_input'}, :input_html => {:class => 'horiz_input'}, :placeholder => 'Event name',    :readonly => readonly %>
+            <%= event_form.input :date,    :label_html => {:class => 'horiz_input'}, :input_html => {:class => 'horiz_input'}, :placeholder => 'Event date',    :readonly => readonly %>
+            <%= event_form.input :comment, :label_html => {:class => 'horiz_input'}, :input_html => {:class => 'horiz_input'}, :placeholder => 'Event comment', :readonly => readonly %>
+            <%= event_form.link_to_remove "Delete this event" %>
         <% end %>
+
+        <hr>
 
         <% if !readonly %>
             <p><%= f.link_to_add "Add an event", :events %></p>
-        <% end  %>
+        <% end %>
 
 
         <h3>Administrators </h3>
         <%= f.simple_fields_for :admins do |event_form| %>
-            <%= event_form.input :email  %>
+            <%= event_form.input :email, :readonly => readonly  %>
+            <%= event_form.link_to_remove "Delete this admin" %>
         <% end %>
 
         <% if !readonly %>
             <p><%= f.link_to_add "Add an admin", :admins %></p>
-        <% end  %>
+        <% end %>
+
+        <h3>Photos</h3>
+        <%= f.simple_fields_for :photos do |photo_form| %>
+            <%= photo_form.input :image, :as => :avatar, :label => false, :readonly => readonly %>
+            <% if !readonly %>
+                <%= photo_form.link_to_remove "Remove photo" %>
+            <% end %>
+            <hr>
+        <% end %>
+
+        <% if !readonly %>
+            <p><%= f.link_to_add "Add a photo", :photos %></p>
+        <% end %>
+
+        <h3>Stories</h3>
+        <%= f.simple_fields_for :stories do |story_form| %>
+            <%= story_form.input :title, :readonly => readonly %>
+            <%= story_form.input :content, :readonly => readonly %>
+            <% if !readonly %>
+                <%= story_form.link_to_remove "Remove story" %>
+            <% end %>
+            <hr>
+        <% end %>
+
+        <% if !readonly %>
+            <p><%= f.link_to_add "Add a story", :stories %></p>
+        <% end %>
 
     <% end %>
 
-
-
     <% if !readonly %>
-    <div class="actions">
-      <%= f.submit %>
-    </div>
-    <% end  %>
+        <div class="actions">
+          <%= f.submit %>
+        </div>
+
+        <div class="actions">
+          <%= link_to "Destroy this Person's site", @person, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </div>
+    <% end %>
 
 <% end %>
