--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -5,4 +5,4 @@
 <%= render 'form', :readonly => true %>
 
 <%= link_to 'Edit', edit_person_path(@person) %> |
-<%= link_to 'Back', people_path %>
+<%= link_to 'Back', root_path %>
