--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1239,7 +1239,7 @@ $topbar-bg: #254aa1;
 
 // Height and margin
 
-$topbar-height: 90px;  // 45px
+// $topbar-height: 45px
 // $topbar-margin-bottom: emCalc(30);
 
 // Control Input height for top bar
