--- a/app/views/authentications/home.html.erb
+++ b/app/views/authentications/home.html.erb
@@ -3,7 +3,7 @@
 <% if user_signed_in? %>
     <h5>Logged in as <strong><%= current_user.email %></strong>.</h5>
     <%= link_to 'Edit profile', edit_user_registration_path %> |
-    <%= link_to 'Show/edit credit cards', profile_path %> |
+    <%= link_to 'Show/edit credit credit_cards', profile_path %> |
     <%= link_to 'Authentications', authentications_path %> |
     <%= link_to 'Facebook stuff', facebook_path %> |
     <hr>
