--- a/app/views/carts/present_checkout_view.html.erb
+++ b/app/views/carts/present_checkout_view.html.erb
@@ -11,6 +11,6 @@
 	  </tr>
   <% end %>
 </table>
-<li><%= link_to "Pay with credit card", credit_card_payment_path %></li>
+<li><%= link_to "Pay with credit credit_card", credit_card_payment_path %></li>
 <li><%= link_to "Pay with PayPal", paypal_payment_path %></li>
 
