--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -63,7 +63,7 @@
 
 <%= simple_nested_form_for current_user, :url => user_registration_path do |f| %>
 
-    <%= f.fields_for :cards do |card_form| %>
+    <%= f.fields_for :credit_cards do |card_form| %>
 
         <fieldset>
 
@@ -75,15 +75,15 @@
                 <legend>Credit Card</legend>
                 <div class="row">
                   <div class="large-2 columns">
-                    <%= card_form.input :cc_type, :placeholder => 'Credit Card Type', :collection => ['Visa', 'Amex', 'Diners'] %>
+                    <%= card_form.input :cc_type, :placeholder => 'Credit CreditCard Type', :collection => ['Visa', 'Amex', 'Diners'] %>
                   </div>
                 </div>
                 <div class="row">
                   <div class="large-4 columns">
-                    <%= card_form.input :cc_number, :placeholder => 'Credit Card Number' %>
+                    <%= card_form.input :cc_number, :placeholder => 'Credit CreditCard Number' %>
                   </div>
                   <div class="large-4 columns">
-                    <%= card_form.input :cc_cvc, :placeholder => 'Credit Card CVC Code' %>
+                    <%= card_form.input :cc_cvc, :placeholder => 'Credit CreditCard CVC Code' %>
                   </div>
                   <div class="large-4 columns">
                   </div>
@@ -103,12 +103,12 @@
             <div class="large-8 columns">
               <fieldset>
                 <legend>Name on credit card</legend>
-                <%= card_form.text_field :cc_name, :placeholder => 'Name on Credit Card' %>
+                <%= card_form.text_field :cc_name, :placeholder => 'Name on Credit CreditCard' %>
               </fieldset>
             </div>
             <div class="row">
               <div class="large-12 columns">
-                <%= card_form.link_to_remove "Remove this card" %>
+                <%= card_form.link_to_remove "Remove this credit_card" %>
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@
 
         <hr>
     <% end %>
-    <p><%= f.link_to_add "Add a card", :cards %></p>
+    <p><%= f.link_to_add "Add a credit_card", :credit_cards %></p>
     <hr>
     <%= f.submit %>
 <% end %>
