--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -123,57 +123,18 @@
 
 
 
-
-
-<style type="text/css">
-	.person-common {
-		padding: 5px;
-		font-family: 'Akzidenz-Grotesk BQ', sans-serif;
-		font-size: 2em;
-		font-weight: lighter;
-	}
-
-	.person-name {
-		color: black;
-		margin: 10px 0 10px 0;
-	}
-
-	.person-header {
-
-	}
-
-	.person-text {
-		color: gray;
-		letter-spacing: -1px;
-	}
-
-	.person-status-image i.foundicon-mail {
-		font-size: 0.7em;
-		margin-right: 10px;
-		vertical-align: middle;
-		color: darkgray;
-	}
-
-	.person-status-image span {
-		font-size: 0.5em;
-		vertical-align: middle;
-		color: darkgray;
-	}
-
-</style>
-
 <div class="row">
   <div class="large-4 small-12 columns">
-	<div class="person-common">
+	<div class="person-info">
 	  <div class="person-header">
 		<div class="person-name">
 		  John Doe
 		</div>
+		<hr/>
 		<div class="person-status-image">
 		  <i class="foundicon-mail"></i><span>Message</span><i class="foundicon-"
 		</div>
 	  </div>
-	  <hr/>
 	  <div class="person-icon-flags">
 
 	  </div>
