--- a/app/views/facebook/show_fb_friends.html.erb
+++ b/app/views/facebook/show_fb_friends.html.erb
@@ -1,5 +1,8 @@
 <h1>Your Facebook friends:</h1>
 
 <% @friends.each do |f|  %>
-    <h5><%= f.inspect %></h5>
+    <!-- <h5>< % = f.inspect % ></h5>  -->
+	<h5><%= f.identifier %></h5>
+	<h4><%= f.name %></h4>
+	<h4><%= f.username %></h4>
 <% end %>
