--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
   	<!-- Set the viewport width to device width for mobile -->
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+  	<title><%= content_for?(:title) ? yield(:title) : "Miss U" %></title>
   	<%= stylesheet_link_tag    "application" %>
   	<%= javascript_include_tag "modernizr.js" %>
     <%= csrf_meta_tags %>
