--- a/app/views/layouts/devise_layout.html.erb
+++ b/app/views/layouts/devise_layout.html.erb
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
   <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "custom.modernizr" %>
+  <%= javascript_include_tag "modernizr" %>
   <%= csrf_meta_tags %>
 </head>
 
