--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -1,113 +1,32 @@
-<nav class="top-bar" data-options="is_hover:false">
-
+<nav class="top-bar" data-topbar>
   <ul class="title-area">
-    <!-- Title Area -->
-    <li class="name">
-      <h1><%= link_to "Forget me Not", root_path %></h1>
-    </li>
-    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+	<li class="name">
+	  <h1><a href="#">Miss U</a></h1>
+	</li>
+	<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
 
   <section class="top-bar-section">
+	<!-- Right Nav Section -->
+	<ul class="right">
+	  <li class="has-form has-button">
+		<% if current_user %>
+			<%= link_to "Logout", destroy_user_session_path, :method => :delete, :class => 'button' %>
+		<% else %>
+			<%= link_to "Login", new_user_session_path, :class => 'button' %>
+		<% end %>
+	  </li>
+	  <% if current_user %>
+		  <li class="has-form has-button">
+			<%= link_to "Profile", profile_path, :class => 'button' %>
+		  </li>
+	  <% end %>
+	</ul>
 
-    <!-- Left Nav Section -->
-    <ul class="left">
-      <li class="divider"></li>
-      <li><%= link_to "Admin", "/admin" %></li>
-      <li class="divider"></li>
-
-
-      <!--         -->
-      <!-- S I T E -->
-      <!--         -->
-      <li class="has-dropdown"><a href="#">Site</a>
-
-        <ul class="dropdown">
-
-          <li class="has-dropdown">
-            <a href="#">Products</a>
-            <ul class="dropdown">
-              <li><label>Products</label></li>
-              <li><%= link_to "New product", new_product_path %></li>
-              <li><%= link_to "List products", products_path %></li>
-            </ul>
-          </li>
-
-          <li class="has-dropdown">
-            <a href="#">Categories</a>
-            <ul class="dropdown">
-              <li><label>Categories</label></li>
-              <li><%= link_to "New category", new_category_path %></li>
-              <li><%= link_to "List categories", categories_path %></li>
-            </ul>
-          </li>
-
-          <li class="has-dropdown">
-            <a href="#">Admin site</a>
-            <ul class="dropdown">
-              <li><label>Admin sites</label></li>
-              <li><%= link_to "New site", new_person_path %></li>
-              <li><%= link_to "List sites", people_path %></li>
-            </ul>
-          </li>
-
-          <li class="has-dropdown">
-            <a href="#">Admin photos</a>
-
-            <ul class="dropdown">
-              <li><label>Admin photos</label></li>
-              <li><%= link_to "New site", new_person_path %></li>
-              <li><%= link_to "List sites", people_path %></li>
-            </ul>
-          </li>
-
-        </ul>
-      </li>
-
-
-
-      <li class="divider"></li>
-    </ul>
-
-    <!-- Right Nav Section -->
-    <ul class="right">
-
-
-      <li class="has-form">
-
-        <!--
-        <form action="/persons/search" method="get">
-          <div class="row collapse">
-            <div class="small-8 columns">
-              <input type="text">
-            </div>
-            <div class="small-4 columns">
-              <a href="#" class="alert button">Search</a>
-            </div>
-          </div>
-        </form>
-        -->
-
-      </li>
-
-      <li class="divider show-for-small"></li>
-
-      <li class="has-form has-button">
-        <% if current_user %>
-            <%= link_to "Logout", destroy_user_session_path, :method => :delete, :class => 'button' %>
-        <% else %>
-            <%= link_to "Login", new_user_session_path, :class => 'button' %>
-        <% end %>
-      </li>
-
-      <% if current_user %>
-          <li class="has-form has-button">
-              <%= link_to "Profile", profile_path, :class => 'button' %>
-          </li>
-      <% end %>
-
-    </ul>
-
+	<!-- Left Nav Section -->
+	<ul class="left">
+	  <li><a href="#">Left Nav Button</a></li>
+	</ul>
   </section>
 </nav>
+
