--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,5 +1,35 @@
-<h1>New person</h1>
+<h1>Create a new site</h1>
 
-<%= render 'form', :readonly => false %>
+<p class="add_person_description">
+  Type in the name of the site. Most often this will be the name of the relative,friend or pet that you want to remember.
+  Use the Search facility to check whether someone else already has created a site. Note that it is possible to create many
+  sites for one person.
+</p>
 
-<%= link_to 'Back', people_path %>
+<%= simple_nested_form_for @person, :html => {:class => "form-horizontal"} do |f| %>
+
+	<!--
+	<% if @person.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@person.errors.count, "error") %> prohibited this person from being saved:</h2>
+          <ul>
+            <% @person.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+	-->
+
+	<div class="row">
+	  <div class="large-12 small-12 columns">
+		<div class="row">
+		  <%= f.input :name %>
+		  <%= f.input :surname %>
+		</div>
+	  </div>
+	</div>
+
+	<%= f.submit %>
+<% end  %>
+
